--- a/oradores.html
+++ b/oradores.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="contenedor">
+  <div class="contenedor">
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand text-light logo" href="#">
@@ -24,10 +24,10 @@
 
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link text-light" href="index.html">La conferencia</a>
+                    <a class="nav-link text-secondary" href="index.html">La conferencia</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-secondary" href="oradores.html">Los oradores</a>
+                    <a class="nav-link text-light" href="oradores.html">Los oradores</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-secondary" href="lugar.html">El lugar y la fecha</a>
