estructura basica del sitio corregido

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                     <a class="nav-link text-light" href="index.html">La conferencia</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-secondary" href="oradores.html">Los oradores</a>
+                    <a class="nav-link text-secondary" href="#oradores">Los oradores</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-secondary" href="lugar.html">El lugar y la fecha</a>
+                    <a class="nav-link text-secondary" href="#lugarFecha">El lugar y la fecha</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-secondary" href="vacanteOrador.html">Convierteme en orador</a>
+                    <a class="nav-link text-secondary" href="#vacante">Convierteme en orador</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-success" href="tickets.html">Comprar Tickets</a>
+                    <a class="nav-link text-success" href="#tickets">Comprar Tickets</a>
                   </li>
                 </ul>
               </div>
