--- a/index.html
+++ b/index.html
@@ -53,23 +53,27 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="./img/ba1.jpg" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                  <div class="texto-carrusel">
+                    <h5 class="fw-bold">Conf Bs As</h5>
+                    <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conociemineto y experiencia de los expertos que están creado el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos.</p>
+                    <button type="button" class="btn btn-outline-light mx-2">Quiero ser orador</button>
+                    <button type="button" class="btn btn-success">Comprar Tickets</button>
+
+
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="./img/ba2.jpg" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                  <div class="texto-carrusel">
+                    <h5 class="fw-bold">Conf Bs As</h5>
+                    <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conociemineto y experiencia de los expertos que están creado el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos.</p>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <img src="./img/ba3.jpg" class="d-block w-100" alt="...">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                  <div class="texto-carrusel">
+                    <h5 class="fw-bold">Conf Bs As</h5>
+                    <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conociemineto y experiencia de los expertos que están creado el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos.</p>
                   </div>
                 </div>
               </div>
@@ -87,15 +91,23 @@
 
           <section id="oradores">
             <div class="container">
-              <h2>CONOCE A LOS ORADORES</h2>
+              <h2 class="text-center fs-6 mt-2">CONOCE A LOS ORADORES</h2>
+              <h2 class="text-center">ORADORES</h2>
               <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-6 col-lg-4" style="width: 26rem;">
                   <div class="card">
                     <img src="./img/steve.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <button type="button" class="btn btn-warning fw-bold"
+                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        JavaScript
+                      </button>
+                      <button type="button" class="btn btn-info text-light fw-bold"
+                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        React
+                      </button>
+                      <h5 class="card-title fw-bold">Steve Jobs</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum cupiditate impedit autem! Praesentium error animi minus fugit? Suscipit ipsam quia soluta non rerum debitis voluptas error provident sunt.</p>
                     </div>
                   </div>
                 </div>
@@ -103,9 +115,16 @@
                   <div class="card">
                     <img src="./img/bill.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <button type="button" class="btn btn-warning fw-bold"
+                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        JavaScript
+                      </button>
+                      <button type="button" class="btn btn-info text-light fw-bold"
+                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        React
+                      </button>
+                      <h5 class="card-title fw-bold">Bill Gates</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum cupiditate impedit autem! Praesentium error animi minus fugit? Suscipit ipsam quia soluta non rerum debitis voluptas error provident sunt.</p>
                     </div>
                   </div>
                 </div>
@@ -113,9 +132,16 @@
                   <div class="card">
                     <img src="./img/ada.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <button type="button" class="btn btn-secondary fw-bold"
+                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        JavaScript
+                      </button>
+                      <button type="button" class="btn btn-danger fw-bold"
+                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                        React
+                      </button>
+                      <h5 class="card-title fw-bold">Ada Lovelace</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum cupiditate impedit autem! Praesentium error animi minus fugit? Suscipit ipsam quia soluta non rerum debitis voluptas error provident sunt.</p>
                     </div>
                   </div>
                 </div>
