--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
                     <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conociemineto y experiencia de los expertos que están creado el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos.</p>
                     <button type="button" class="btn btn-outline-light mx-2">Quiero ser orador</button>
                     <button type="button" class="btn btn-success">Comprar Tickets</button>
-
-
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -67,6 +65,8 @@
                   <div class="texto-carrusel">
                     <h5 class="fw-bold">Conf Bs As</h5>
                     <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conociemineto y experiencia de los expertos que están creado el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos.</p>
+                    <button type="button" class="btn btn-outline-light mx-2">Quiero ser orador</button>
+                    <button type="button" class="btn btn-success">Comprar Tickets</button>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -74,6 +74,8 @@
                   <div class="texto-carrusel">
                     <h5 class="fw-bold">Conf Bs As</h5>
                     <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conociemineto y experiencia de los expertos que están creado el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos.</p>
+                    <button type="button" class="btn btn-outline-light mx-2">Quiero ser orador</button>
+                    <button type="button" class="btn btn-success">Comprar Tickets</button>
                   </div>
                 </div>
               </div>
@@ -159,7 +161,7 @@
                   <div class="card-body m-2">
                     <h5 class="card-title text-light fw-bold">Bs As - Octubre</h5>
                     <p class="card-text text-light my-2">
-                      Buenos Aires es la provincia y localidad mas grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formadio una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km de superficie).
+                      Buenos Aires es la provincia y localidad mas grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formadio una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup> de superficie).
                     </p>
                     <button type="button" class="btn btn-outline-light mt-2">Conocé más</button>
                   </div>
@@ -168,7 +170,24 @@
           </section>
 
           <section id="vacante">
+            <div class="formulario w-50 m-auto my-2">
+              <form action="">
+                <div class="row">
 
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                  </div>
+                  
+                </div>
+                <div class="row my-2 p-2">
+                  <textarea class="form-control"rows="3"></textarea>
+                  <button type="submit" class="btn btn-success w-100">Enviar</button>
+                </div>
+              </form>
+            </div>
           </section>
 
           <footer>
