--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
                     <div class="card-body">
                       <button type="button" class="btn btn-secondary fw-bold"
                       style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                        JavaScript
+                        Negocios
                       </button>
                       <button type="button" class="btn btn-danger fw-bold"
                       style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                        React
+                        Startups
                       </button>
                       <h5 class="card-title fw-bold">Ada Lovelace</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatum cupiditate impedit autem! Praesentium error animi minus fugit? Suscipit ipsam quia soluta non rerum debitis voluptas error provident sunt.</p>
@@ -158,9 +158,9 @@
               </div>
 
               <div class="col-12 col-md-12 col-lg-6 m-0 p-0 bg-secondary">
-                  <div class="card-body m-2">
-                    <h5 class="card-title text-light fw-bold">Bs As - Octubre</h5>
-                    <p class="card-text text-light my-2">
+                  <div class="card-body m-2 p-2">
+                    <h3 class="card-title text-light fw-bold">Bs As - Octubre</h3>
+                    <p class="text-light my-2">
                       Buenos Aires es la provincia y localidad mas grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formadio una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup> de superficie).
                     </p>
                     <button type="button" class="btn btn-outline-light mt-2">Conocé más</button>
@@ -170,28 +170,53 @@
           </section>
 
           <section id="vacante">
+            <h2 class="text-center fs-6 mt-2">CONVIERTETE EN UN</h2>
+            <h2 class="text-center">ORADOR</h2>
+            <h6 class="text-center">Anótate como orador para dar una charla ignite. Cuentanos de qué quieres hablar!</h6>
             <div class="formulario w-50 m-auto my-2">
               <form action="">
                 <div class="row">
-
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                    <input type="text" class="form-control" placeholder="Nombre" aria-label="First name">
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                    <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name">
                   </div>
                   
                 </div>
                 <div class="row my-2 p-2">
-                  <textarea class="form-control"rows="3"></textarea>
-                  <button type="submit" class="btn btn-success w-100">Enviar</button>
+                  <textarea class="form-control" placeholder="Sobre que queres hablar?" rows="3"></textarea>
+                  <p class="text-muted p-0 m-0 my-1">Recuerde incluir un titulo para tu charla</p>
+                  <button type="submit" class="btn btn-success my-2 w-100">Enviar</button>
                 </div>
               </form>
             </div>
           </section>
 
-          <footer>
-            Desarrollado por shinta
+          <footer class="pie p-3">
+            <div class="container d-flex justify-content-between align-items-center">
+              <div>
+                <p>Preguntas<br /> frecuentes</p>
+              </div>
+              <div>
+                <p>Contáctenos</p>
+              </div>
+              <div>
+                <p>Prensa</p>
+              </div>
+              <div>
+                <p>Conferencias</p>
+              </div>
+              <div>
+                <p>Términos y<br /> condiciones</p>
+              </div>
+              <div>
+                <p>Privacidad</p>
+              </div>
+              <div>
+                <p>Estudiantes</p>
+              </div>
+            </div>
           </footer>
     </div>
     <script src="./js/bootstrap.bundle.min.js"></script>
