resolviendo bug menu

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="contenedor">
-        <nav class="navbar navbar-expand-lg bg-dark">
+        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand text-light logo" href="#">
                 <img src="./img/codoacodo.png" alt="">
               </a>
-              <a class="navbar-brand text-light" href="#">Navbar</a>
+              <a class="navbar-brand text-light text-end" href="#">Bienvenido</a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
