agregando 24 la funcionalidad js compra tickets

--- a/index.html
+++ b/index.html
@@ -193,6 +193,96 @@
             </div>
           </section>
 
+          <section class="mb-3" id="tickets">
+            <div class="container">
+              <h2 class="text-center my-3">Compre su entrada</h2>
+              <div class="row justify-content-md-center g-1">
+                  <div class="col-3" style="width: 13rem;">
+                      <div class="card border border-primary p-1">
+                          <div class="card-body text-center">
+                              <h5 class="card-title">Estudiante</h5>
+                              <p class="card-text">Tienen un descuento</p>
+                              <p class="card-text fw-bold">80%</p>
+                              <h6 class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">* presentar
+                                  documentación</h6>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-3" style="width: 13rem;">
+                      <div class="card border border-success p-1">
+                          <div class="card-body text-center">
+                              <h5 class="card-title">Trainee</h5>
+                              <p class="card-text">Tienen un descuento</p>
+                              <p class="card-text fw-bold">50%</p>
+                              <h6 class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">* presentar
+                                  documentación</h6>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-3" style="width: 13rem;">
+                      <div class="card border border-warning p-1">
+                          <div class="card-body text-center">
+                              <h5 class="card-title">Junior</h5>
+                              <p class="card-text">Tienen un descuento</p>
+                              <p class="card-text fw-bold">15%</p>
+                              <h6 class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">* presentar
+                                  documentación</h6>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+  
+          <!-- Form -->
+          <div class="container w-50 pt-2">
+              <!-- Texto superior del formulario -->
+              <div class="text-center">
+                  <p class="m-0"><sup>VENTA</sup>
+                  <h2>VALOR DE TICKET $200</h2>
+                  </p>
+              </div>
+              
+              <!-- Formulario -->
+              <form class="row g-1 gx-2 formulario" id="formulario">
+                  <div class="col-md-6 mb-3">
+                      <input type="text" class="form-control" placeholder="Nombre">
+                  </div>
+                  <div class="col-md-6 mb-3">
+                      <input type="text" class="form-control" placeholder="Apellido">
+                  </div>
+                  <div class="mb-3">
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Correo">
+                  </div>
+                  <div class="col-md-6 mb-3">
+                      <label for="cantidad" class="form-label">Cantidad</label>
+                      <input type="text" class="form-control" id="cantidad" placeholder="Cantidad">
+                  </div>
+                  <div class="col-md-6 mb-3">
+                      <label for="cantidad" class="form-label">Categoría</label>
+                      <select id="categoria" class="form-select">
+                          <option value="">Sin categoria</option>
+                          <option value="estudiante">Estudiante</option>
+                          <option value="trainee">Trainee</option>
+                          <option value="junior">Junior</option>
+                      </select>
+                  </div>
+                  <div class="mb-3">
+                      <p class="alert alert-primary" id="totalAPagar">Total a Pagar: $</p>
+                  </div>
+  
+                  <div class="d-grid gap-2 col-6 mx-auto">
+                      <button class="btn text-white fs-6 btnBorrar" style="background-color: #96c93e;"
+                          type=" button" id="borrar">Borrar</button>
+                  </div>
+                  <div class="d-grid gap-2 col-6 mx-auto">
+                      <button class="btn text-white fs-6 btnResumen" style="background-color: #96c93e;"
+                          type=" button" id="resumen">Resumen</button>
+                  </div>
+              </form>
+          </div>
+
+          </section>
+
           <footer class="pie p-3">
             <div class="container d-flex justify-content-between align-items-center">
               <div>
@@ -220,5 +310,6 @@
           </footer>
     </div>
     <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
